--- a/phone.html
+++ b/phone.html
@@ -45,6 +45,22 @@
             No Phone Found!!!! Please Do again....<:3
           </h3>
         </div>
+        <div id="show-all" class="text-center d-none">
+          <button class="btn btn-info">Show All</button>
+        </div>
+
+        <!--  spiner  -->
+
+        <section id="loader" class="d-none">
+          <div
+            style="height: 400px"
+            class="d-flex justify-content-center align-atems-center"
+          >
+            <div class="spinner-border text-success" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
     <script
