--- a/phone.html
+++ b/phone.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <h1>Welcome to phone shop!</h1>
+    <h1 class="mb-5 mt-5 text-center">Welcome to phone shop!</h1>
     <section class="container">
-      <div class="mb-3 d-flex">
+      <div class="mb-3 d-flex ms-5 ps-5">
         <input
           id="src-input"
           type="text"
@@ -41,12 +41,14 @@
 
         <!--  warning sms -->
         <div id="no-phone" class="mt-3 pt-5 d-none">
-          <h3 class="text-warning">
+          <h3 class="text-warning text-center">
             No Phone Found!!!! Please Do again....<:3
           </h3>
         </div>
         <div id="show-all" class="text-center d-none">
-          <button class="btn btn-info">Show All</button>
+          <button id="btn-showAll" class="btn btn-info mt-3 mb-5">
+            Show All
+          </button>
         </div>
 
         <!--  spiner  -->
